--- a/Website/assets/about.html
+++ b/Website/assets/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>About | NovaIT Services</title>
+  <title>About | VaultVerge AI Consulting Services</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,9 +15,9 @@
   <div class="container">
     <div class="nav">
       <a class="brand" href="../index.html">
-        <img class="brand-logo" src="logo.png" alt="Company logo" />
+        <img class="brand-logo" src="logo.svg" alt="Company logo" />
         <div>
-          NovaIT Services
+          VaultVerge AI Consulting Services
           <small>Cloud • Security • Automation</small>
         </div>
       </a>
@@ -67,7 +67,7 @@
   <div class="container page-hero-grid">
     <div class="reveal">
       <span class="kicker">About</span>
-      <h1 class="h1" style="margin-top:10px;">Secure, reliable IT — built to scale with you.</h1>
+      <h1 class="h1" style="margin-top:10px;">Secure, reliable IT built to scale with you.</h1>
       <p class="lead">
         We help small businesses and growing teams modernize cloud infrastructure, tighten security,
         and automate operations with clean documentation and measurable outcomes.
@@ -161,8 +161,8 @@
     <div class="footer-grid">
       <div>
         <div class="brand" style="margin-bottom:10px;">
-          <img class="brand-logo" src="logo.png" alt="Company logo" />
-          <div>NovaIT Services<small>Clear outcomes, clean execution</small></div>
+          <img class="brand-logo" src="logo.svg" alt="Company logo" />
+          <div>VaultVerge AI Consulting Services<small>Clear outcomes, clean execution</small></div>
         </div>
         <p style="margin:0;color:rgba(255,255,255,.75);">
           We build and maintain practical IT systems that reduce risk and improve uptime.
@@ -193,13 +193,13 @@
         <h4>Contact</h4>
         <div style="display:grid; gap:8px;">
           <a href="tel:+17040000000">+1 (704) 000-0000</a>
-          <a href="mailto:hello@novait.example">hello@novait.example</a>
+          <a href="mailto:hello@VaultVerge AI Consulting.example">hello@VaultVerge AI Consulting.example</a>
           <a href="contact.html">Contact form</a>
         </div>
       </div>
     </div>
 
-    <div class="footer-note">© <span id="year"></span> NovaIT Services. All rights reserved.</div>
+    <div class="footer-note">© <span id="year"></span> VaultVerge AI Consulting Services. All rights reserved.</div>
   </div>
 </footer>
 
