--- a/Website/assets/contact.html
+++ b/Website/assets/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Contact | NovaIT Services</title>
+  <title>Contact | VaultVerge AI Consulting Services</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
       <a class="brand" href="../index.html">
         <img class="brand-logo" src="logo.png" alt="Company logo" />
         <div>
-          NovaIT Services
+          VaultVerge AI Consulting Services
           <small>Cloud • Security • Automation</small>
         </div>
       </a>
@@ -89,7 +89,7 @@
     <div class="card lift reveal" style="padding:18px;">
       <span class="badge">Quick info</span>
       <div style="margin-top:12px; display:grid; gap:10px; color:var(--muted);">
-        <div><b style="color:var(--ink);">Email:</b> hello@novait.example</div>
+        <div><b style="color:var(--ink);">Email:</b> hello@VaultVerge AI Consulting.example</div>
         <div><b style="color:var(--ink);">Phone:</b> +1 (704) 000-0000</div>
         <div><b style="color:var(--ink);">Hours:</b> Mon–Fri</div>
       </div>
@@ -159,7 +159,7 @@
 
         <div class="hero-actions" style="margin-top:6px;">
           <button class="btn" type="submit">Send message</button>
-          <a class="btn secondary" href="mailto:hello@novait.example">Email instead</a>
+          <a class="btn secondary" href="mailto:hello@VaultVerge AI Consulting.example">Email instead</a>
         </div>
       </form>
     </div>
@@ -194,7 +194,7 @@
       <div>
         <div class="brand" style="margin-bottom:10px;">
           <img class="brand-logo" src="logo.png" alt="Company logo" />
-          <div>NovaIT Services<small>Clear outcomes, clean execution</small></div>
+          <div>VaultVerge AI Consulting Services<small>Clear outcomes, clean execution</small></div>
         </div>
         <p style="margin:0;color:rgba(255,255,255,.75);">
           We build and maintain practical IT systems that reduce risk and improve uptime.
@@ -225,13 +225,13 @@
         <h4>Contact</h4>
         <div style="display:grid; gap:8px;">
           <a href="tel:+17040000000">+1 (704) 000-0000</a>
-          <a href="mailto:hello@novait.example">hello@novait.example</a>
+          <a href="mailto:hello@VaultVerge AI Consulting.example">hello@VaultVerge AI Consulting.example</a>
           <a href="contact.html">Contact form</a>
         </div>
       </div>
     </div>
 
-    <div class="footer-note">© <span id="year"></span> NovaIT Services. All rights reserved.</div>
+    <div class="footer-note">© <span id="year"></span> VaultVerge AI Consulting Services. All rights reserved.</div>
   </div>
 </footer>
 
