--- a/Website/assets/services.html
+++ b/Website/assets/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Services - NovaIT Services</title>
+  <title>Services - VaultVerge AI Consulting Services</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,9 +15,9 @@
   <div class="container">
     <div class="nav">
       <a class="brand" href="../index.html">
-        <img class="brand-logo" src="logo.png" alt="Company logo" />
+        <img class="brand-logo" src="logo.svg" alt="Company logo" />
         <div>
-          NovaIT Services
+          VaultVerge AI Consulting Services
           <small>Cloud • Security • Automation</small>
         </div>
       </a>
@@ -228,8 +228,8 @@
     <div class="footer-grid">
       <div>
         <div class="brand" style="margin-bottom:10px;">
-          <img class="brand-logo" src="logo.png" alt="Company logo" />
-          <div>NovaIT Services<small>Clear outcomes, clean execution</small></div>
+          <img class="brand-logo" src="logo.svg" alt="Company logo" />
+          <div>VaultVerge AI Consulting Services<small>Clear outcomes, clean execution</small></div>
         </div>
         <p style="margin:0;color:rgba(255,255,255,.75);">
           Practical IT systems that reduce risk and improve uptime.
@@ -259,14 +259,14 @@
       <div>
         <h4>Contact</h4>
         <div style="display:grid; gap:8px;">
-          <a href="tel:+17040000000">+1 (704) 000-0000</a>
-          <a href="mailto:hello@novait.example">hello@novait.example</a>
+          <a href="tel:+14384539658">+1 (438) 453-9658</a>
+          <a href="mailto:vaultvergeaiconsulting@gmail.com">vaultvergeaiconsulting@gmail.com</a>
           <a href="contact.html">Contact form</a>
         </div>
       </div>
     </div>
 
-    <div class="footer-note">© <span id="year"></span> NovaIT Services. All rights reserved.</div>
+    <div class="footer-note">© <span id="year"></span> VaultVerge AI Consulting Services. All rights reserved.</div>
   </div>
 </footer>
 
