--- a/Website/assets/blog-post.html
+++ b/Website/assets/blog-post.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>How to automate repetitive IT tasks safely | NovaIT Services</title>
+  <title>How to automate repetitive IT tasks safely | VaultVerge AI Consulting Services</title>
   <meta name="description" content="A practical approach to choosing the right automations, guardrails, and rollout plan—without breaking production." />
 
   <link rel="stylesheet" href="style.css" />
@@ -22,7 +22,7 @@
         <a class="brand" href="../index.html">
           <img class="brand-logo" src="logo.png" alt="Company logo" />
           <div>
-            NovaIT Services
+            VaultVerge AI Consulting Services
             <small>Cloud • Security • Automation</small>
           </div>
         </a>
@@ -250,7 +250,7 @@
         <div>
           <div class="brand" style="margin-bottom:10px;">
             <img class="brand-logo" src="logo.png" alt="Company logo" />
-            <div>NovaIT Services<small>Clear outcomes, clean execution</small></div>
+            <div>VaultVerge AI Consulting Services<small>Clear outcomes, clean execution</small></div>
           </div>
           <p style="margin:0;color:rgba(255,255,255,.75);">
             We build and maintain practical IT systems that reduce risk and improve uptime.
@@ -281,13 +281,13 @@
           <h4>Contact</h4>
           <div style="display:grid; gap:8px;">
             <a href="tel:+17040000000">+1 (704) 000-0000</a>
-            <a href="mailto:hello@novait.example">hello@novait.example</a>
+            <a href="mailto:hello@VaultVerge AI Consulting.example">hello@VaultVerge AI Consulting.example</a>
             <a href="contact.html">Contact form</a>
           </div>
         </div>
       </div>
 
-      <div class="footer-note">© <span id="year"></span> NovaIT Services. All rights reserved.</div>
+      <div class="footer-note">© <span id="year"></span> VaultVerge AI Consulting Services. All rights reserved.</div>
     </div>
   </footer>
 
